# ChangeLog for kde-base/kdialog
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdialog/ChangeLog,v 1.8 2005/05/25 21:23:05 danarmak Exp $

*kdialog-3.4.1 (25 May 2005)

  25 May 2005; Dan Armak <danarmak@gentoo.org> +kdialog-3.4.1.ebuild:
  Ebuilds for KDE 3.4.1. These are package.masked until 3.4.1 is actually
  released. You can't get the tarballs yet.

  27 Apr 2005; Markus Rothe <corsair@gentoo.org> kdialog-3.4.0.ebuild:
  Added ~ppc64 to KEYWORDS

  20 Mar 2005; Jason Wever <weeve@gentoo.org> kdialog-3.4.0.ebuild:
  Added ~sparc keyword.

  18 Mar 2005; Daniel Goller <morfic@gentoo.org> kdialog-3.4.0.ebuild:
  Added to ~ppc

  13 Mar 2005; Dan Armak <danarmak@gentoo.org> kdialog-3.4.0.ebuild:
  KDE 3.4.0 ebuilds. Note that the tarballs won't be officially released for a
  few more days.

  02 Mar 2005; Marcus D. Hanwell <cryos@gentoo.org>
  kdialog-3.4.0_beta2.ebuild:
  Marked ~amd64, keywording KDE split ebuilds, bug 80944.

*kdialog-3.4.0_beta2 (05 Feb 2005)

  05 Feb 2005; Dan Armak <danarmak@gentoo.org> +kdialog-3.4.0_beta2.ebuild:
  Ebuild for 3.4.0_beta2. Note that beta2 has NOT been released as of this
  date. This ebuild is for inside testing by the KDE team, and is of course
  package.masked.

*kdialog-3.4.0_beta1 (15 Jan 2005)

  15 Jan 2005; Dan Armak <danarmak@gentoo.org> +metadata.xml,
  +kdialog-3.4.0_beta1.ebuild:
  Adding the split ebuilds to portage. For KDE 3.4, we've created separate
  ebuilds for all the KDE apps.
