@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdialog/Attic/kdialog-3.4.1.ebuild,v 1.2 2005/05/26 17:14:26 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdialog/Attic/kdialog-3.4.1.ebuild,v 1.3 2005/05/27 14:43:23 carlo Exp $
 
 KMNAME=kdebase
 MAXKDEVER=$PV
@@ -11,4 +11,14 @@ DESCRIPTION="KDialog can be used to show nice dialog boxes from shell scripts"
 KEYWORDS="~x86 ~amd64 ~ppc64 ~ppc ~sparc"
 IUSE=""
 
+RDEPEND="sys-apps/eject"
+
 KMNODOCS=true
+
+src_install() {
+	kde-meta_src_install
+	# see bug 89867
+	cp ${FILESDIR}/kdeeject-${PV} ${T}/kdeeject
+	into ${PREFIX}
+	dobin ${T}/kdeeject
+}
